--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: [ windows-latest ]
+    runs-on: windows-latest
 
     steps:
     - name: Get latest CMake and ninja
