--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
         path: _dist-debug/*
 
     - name: Archive release
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: MyMod-Release
         path: _dist-release/*
@@ -72,13 +72,13 @@ jobs:
 
     steps:
     - name: Download debug artifact
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
       with:
         name: MyMod-Debug
         path: MyMod-Debug
 
     - name: Download release artifact
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
       with:
         name: MyMod-Release
         path: MyMod-Release
@@ -97,9 +97,9 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
 
     - name: Upload debug assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
+      #env:
+        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: MyMod-Debug/MyMod-Debug.zip
@@ -107,9 +107,9 @@ jobs:
         asset_content_type: application/zip
 
     - name: Upload release assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
+      #env:
+        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: MyMod-Release/MyMod-Release.zip
