--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,9 +98,8 @@ jobs:
 
     - name: Upload debug assets
       uses: softprops/action-gh-release@v1
-      #env:
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
+        token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
         upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: MyMod-Debug/MyMod-Debug.zip
         asset_name: MyMod-Debug.zip
@@ -108,9 +107,8 @@ jobs:
 
     - name: Upload release assets
       uses: softprops/action-gh-release@v1
-      #env:
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
+        token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
         upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: MyMod-Release/MyMod-Release.zip
         asset_name: MyMod-Release.zip
